--- a/digital/templates/digital/my_cart.html
+++ b/digital/templates/digital/my_cart.html
@@ -73,7 +73,7 @@
 
             <div class="order_btns">
             <a href="{% url 'clear_cart' %}" class="btn_order">Очистить корзину</a>
-            <a href="#" class="btn_order">Оформить заказ</a>
+            <a href="{% url 'checkout' %}" class="btn_order">Оформить заказ</a>
             </div>
 
         </div>
