--- a/digital/static/digital/css/media.css
+++ b/digital/static/digital/css/media.css
@@ -55,6 +55,14 @@
   .login_title{
     text-align: center;
   }
+    .checkout_content{
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+
+  }
+  .check{
+  margin-bottom: 50px;
+  }
   
 }
 
@@ -182,6 +190,8 @@
   .login_content{
     justify-content: center;
   }
+
+
 }
 
 
@@ -228,6 +238,7 @@
 @media(max-width: 576px){
   .container{
     max-width: 100%;
+    padding: 0 15px;
   }
   
   .nav_right a{
@@ -265,6 +276,7 @@
 .order{
   flex-wrap: wrap;
   gap: 15px;
+  justify-content: center;
 }
 
 .login {
@@ -276,5 +288,81 @@
 .btn-to_register {
   width: 260px;
 }
+.block_input{
+    flex-wrap: wrap;
+}
+.icon{
+ gap: 23px;
+}
+
+.click_icon img{
+    width: 20px;
+    height: 20px;
+}
+.heart svg{
+width: 20px;
+    height: 20px;
+}
+
+.logo img{
+ width: 160px;
+}
+
+.address_title {
+    font-size: 20px;
+    margin-bottom: 0;
+}
+.pay_title {
+    font-size: 16px;
+}
+
+.count_price{
+    font-size: 13px;
+    line-height: 17px;
+}
+.count_price p{
+    width: 150px;
+}
+.checkout_title{
+    font-size: 30px;
+    line-height: 18px;
+    margin-bottom: 50px;
+}
+
+.card {
+    padding: 38px 10px;
+}
+
+.btn_order {
+    font-size: 14px;
+    margin-top: 25px;
+}
+
+
+
+.product_price_title, .data_add{
+line-height: 100%;
+font-size: 12px;
+}
+
+.quantity a img {
+    width: 10px;
+    height: 7px;
+}
+.total_products_price{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.total_products_price span {
+font-size: 15px;
+
+}
+
+.total_products_price{
+font-size: 17px;
+}
+
 
 }
