--- a/digital/templates/digital/success.html
+++ b/digital/templates/digital/success.html
@@ -11,5 +11,15 @@
 
 
 {% block main %}
+<main>
+    <div class="content_user">
+        <div class="user container">
+            <h3 class="success_title">Оплата прошла успешно.</h3>
+            <p class="success_title">Наш менеджер с вами свяжеться в ближайшее время.</p>
+        </div>
+    </div>
+</main>
+
+
 
 {% endblock main %}
