--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,12 @@
 
 <!-- header start -->
 
+{% for message in messages %}
+    <div class="alert {{ message.tags }}" role="alert">
+        {{ message }}
+    </div>
+{% endfor %}
+
 <header>
     <div class="nav__header">
         <div class="container">
